Fix #6686: solve dialog "transparency" on Safari

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-dialog.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-dialog.less
@@ -66,7 +66,6 @@
             border-bottom-right-radius: @dialogBorderRadius;
             border: none;
             padding: 10px;
-            height: 100%;
 
             .fr-dialog-buttons {
                 text-align: right;
